--- a/updates/proxmox-update.yml
+++ b/updates/proxmox-update.yml
@@ -20,7 +20,7 @@
       community.general.telegram:
       token: '{{ tg_token }}'
       api_args:
-        chat_id: {{ chatid }}
+        chat_id: '{{ chatid }}'
         parse_mode: "markdown"
         text: "Restart Required - Proxmox Node"
         disable_web_page_preview: true
