Add force flag to WGDashboard installation and change working directory

--- a/install/install-wireguard-debian.yml
+++ b/install/install-wireguard-debian.yml
@@ -25,6 +25,7 @@
         repo: 'https://github.com/donaldzou/WGDashboard.git'
         dest: /srv/wgdashboard
         version: v3.1-dev
+        force: "yes"
 
     - name: Change the working directory to somedir/ before executing the command
       ansible.builtin.shell: cd /srv/wgdashboard
