Update Wireguard installation script to use origin remote instead of main

--- a/install/install-wireguard-debian.yml
+++ b/install/install-wireguard-debian.yml
@@ -26,7 +26,7 @@
         dest: '/srv/wgdashboard'
         version: 'v3.1-dev'  # Updated to point to v3.1-dev branch
         force: yes
-        remote: main
+        remote: origin
 
 
     - name: Change the working directory to somedir/ before executing the command
