Update WireGuard installation script to clone WGDashboard repository with specific branch and single branch option.

--- a/install/install-wireguard-debian.yml
+++ b/install/install-wireguard-debian.yml
@@ -21,9 +21,11 @@
         update_cache: yes
 
     - name: Clone WGDashboard repository
-      git:
-        repo: 'https://github.com/donaldzou/WGDashboard.git'
-        dest: '/srv/wgdashboard'
+      ansible.builtin.command:
+        cmd: git clone --branch v3.1-dev --single-branch https://github.com/donaldzou/WGDashboard.git /srv/wgdashboard
+      args:
+        creates: /srv/wgdashboard/.git
+
 
 
     - name: Change the working directory to somedir/ before executing the command
