--- a/install/install-wireguard-debian.yml
+++ b/install/install-wireguard-debian.yml
@@ -26,14 +26,12 @@
       args:
         creates: /srv/wgdashboard/.git
 
-
-
     - name: Change the working directory to somedir/ before executing the command
       ansible.builtin.shell: cd /srv/wgdashboard
 
     - name: Give execute permissions
       ansible.builtin.file:
-        path: /srv/wgdashboard/wg-dashboard.sh
+        path: /srv/wgdashboard/wgd.sh
         mode: u+x
 
     - name: Run the script
